[workspace]

members = [
    "vidyut-cheda",
    "vidyut-kosha",
    "vidyut-lipi",
    "vidyut-prakriya",
    "vidyut-sandhi",
]

[package]
name = "vidyut"
version = "0.1.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A Sanskrit toolkit"
homepage = "https://github.com/ambuda-org/vidyut"
repository = "https://github.com/ambuda-org/vidyut"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"

[profile.release]
# Enable debug symbols so that we can profile release code.
debug = true
