[workspace]

members = [
    "vidyut-chandas",
    "vidyut-cheda",
    "vidyut-kosha",
    "vidyut-lipi",
    "vidyut-prakriya",
    "vidyut-sandhi",
]

[package]
name = "vidyut"
version = "0.1.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A Sanskrit toolkit"
homepage = "https://github.com/ambuda-org/vidyut"
repository = "https://github.com/ambuda-org/vidyut"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"
rust-version = "1.73"

[dependencies]
vidyut-chandas = { path = "./vidyut-chandas" }
vidyut-cheda = { path = "./vidyut-cheda" }
vidyut-kosha = { path = "./vidyut-kosha" }
vidyut-lipi = { path = "./vidyut-lipi" }
vidyut-sandhi = { path = "./vidyut-sandhi" }
log = "0.4.17"
clap = "4.3.24"
csv = "1.1.6"
multimap = "0.8.3"
lazy_static = "1.4.0"
env_logger = "0.10.0"
rayon = "1.6.1"
rustc-hash = "1.1.0"
glob = "0.3.1"

[profile.release]
# Enable debug symbols so that we can profile release code.
debug = true
incremental = true
