[workspace]

members = [
    "bindings-python",
    "vidyut-chandas",
    "vidyut-cheda",
    "vidyut-data",
    "vidyut-kosha",
    "vidyut-lipi",
    "vidyut-prakriya",
    "vidyut-sandhi",
]

[package]
name = "vidyut"
version = "0.1.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A Sanskrit toolkit"
homepage = "https://github.com/ambuda-org/vidyut"
repository = "https://github.com/ambuda-org/vidyut"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"

[dependencies]
vidyut-chandas = { path = "./vidyut-chandas" }
vidyut-cheda = { path = "./vidyut-cheda" }
vidyut-data= { path = "./vidyut-data" }
vidyut-kosha = { path = "./vidyut-kosha" }
vidyut-lipi = { path = "./vidyut-lipi" }
vidyut-prakriya = { path = "./vidyut-prakriya" }
vidyut-sandhi = { path = "./vidyut-sandhi" }
csv = "1.1.6"
multimap = "0.8.3"
glob = "0.3.1"

[workspace.dependencies]
clap = "4.1.4"
log = "0.4.22"
rayon = "1.6.1"
env_logger = "0.11.6"
rmp-serde = "1.3.0"
rustc-hash = "2.1.0"
serde = "1.0.217"

[profile.release]
# Enable debug symbols so that we can profile release code.
debug = true
incremental = true
