[package]
name = "vidyut-python"
version = "0.3.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "vidyut"
doc = false

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
vidyut-chandas = { path = "../vidyut-chandas" }
vidyut-cheda = { path = "../vidyut-cheda" }
vidyut-kosha = { path = "../vidyut-kosha" }
vidyut-lipi = { path = "../vidyut-lipi" }
vidyut-prakriya = { path = "../vidyut-prakriya" }
vidyut-sandhi = { path = "../vidyut-sandhi" }

[dependencies.pyo3]
version = "0.23.3"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
name = "vidyut"
