[project]
name = "vidyut"
version = "0.4.0"
description = "A high-performance Sanskrit toolkit"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
]

[build-system]
requires = ["maturin>=1.8.1,<1.9"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.8.1",
    "pip>=24.0",
    "pytest>=7.4.4",
    "ruff>=0.7.2",
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=2.0.0",
    "pytest-cov>=4.1.0",
]

[tool.maturin]
include = ["CHANGES.rst", "LICENSE.md", "README.md"]

[tool.ruff]
exclude = ["*.pyi"]
