[package]
name = "vidyut-cheda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vidyut-kosha = { path = "../vidyut-kosha" }
vidyut-sandhi = { path = "../vidyut-sandhi" }
vidyut-lipi = { path = "../vidyut-lipi" }
clap = { version = "4.0.12", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
multimap = "0.8.3"
modular-bitfield = "0.11.2"
priority-queue = "1.2.3"
regex = "1.6.0"
compact_str = "0.6.1"
rustc-hash = "1.1.0"

[dev-dependencies]
tempfile = "3.3.0"
