[package]
name = "vidyut-cheda"
version = "0.1.0"
edition = "2021"

[dependencies]
vidyut-kosha = { path = "../vidyut-kosha" }
vidyut-prakriya = { path = "../vidyut-prakriya" }
vidyut-sandhi = { path = "../vidyut-sandhi" }
priority-queue = "2.1.1"
rustc-hash = { workspace = true }
compact_str = "0.8.1"
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
regex = "1.11.1"
rmp-serde = { workspace = true }
serde = {workspace = true }
