[package]
name = "vidyut-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = "0.8.1"
glob = "0.3.2"
log = { workspace = true}
env_logger = { workspace = true}
rustc-hash = "2.1.0"
rayon = { workspace = true }
vidyut-cheda = { version = "0.1.0", path = "../vidyut-cheda" }
vidyut-kosha = { version = "0.1.0", path = "../vidyut-kosha" }
vidyut-lipi = { version = "0.1.0", path = "../vidyut-lipi" }
vidyut-prakriya = { version = "0.1.0", path = "../vidyut-prakriya" }
clap.workspace = true
csv = "1.3.1"
