[package]
name = "vidyut-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = "0.8.1"
glob = "0.3.2"
log = { workspace = true}
env_logger = { workspace = true}
rustc-hash = "2.1.0"
rayon = { workspace = true }
vidyut-cheda = { path = "../vidyut-cheda" }
vidyut-kosha = { path = "../vidyut-kosha" }
vidyut-lipi = { path = "../vidyut-lipi" }
vidyut-prakriya = { path = "../vidyut-prakriya" }
clap.workspace = true
csv = "1.3.1"
fst = "0.4.7"
regex = "1.11.1"
serde.workspace = true
