[package]
name = "vidyut-kosha"
version = "0.1.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A Sanskrit key-value store"
homepage = "https://github.com/ambuda-org/vidyut"
repository = "https://github.com/ambuda-org/vidyut"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"
rust-version = "1.68"

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
fst = "0.4.7"
modular-bitfield = "0.11.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", optional = true, features = ["derive"] }

[dev-dependencies]
bencher = "0.1.5"
tempfile = "3.3.0"
rand = "0.8.5"
multimap = "0.8.3"

[[bench]]
name = "kosha"
harness = false
