[package]
name = "vidyut-prakriya"
version = "0.1.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A Sanskrit word generator"
homepage = "https://github.com/ambuda-org/vidyut"
repository = "https://github.com/ambuda-org/vidyut"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"
rust-version = "1.68"

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
csv = "1.1.6"
enumset = { version = "1.1.3", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.150", features = ["derive"] }
sha2 = "0.10.6"
sha256 = "1.1.1"
rayon = "1.6.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
rustc-hash = "2.0.0"

[features]
default = ["serde"]
serde = []

[dev-dependencies]
criterion = "0.5.1"
test_utils = { path = "test_utils" }
vidyut-lipi = { path = "../vidyut-lipi" }

[[bench]]
name = "microbenchmarks"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
