[package]
name = "vidyut-prakriya"
version = "0.2.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A Sanskrit word generator"
homepage = "https://github.com/ambuda-org/vidyut"
repository = "https://github.com/ambuda-org/vidyut"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"
rust-version = "1.68"

[dependencies]
enumset = { version = "1.1.3", features = ["serde"] }
rustc-hash = { workspace = true }
serde = { version = "1.0.150", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
vidyut-akshara = { path = "../vidyut-akshara" }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
itertools = "0.10.5"

[dev-dependencies]
clap = { version = "4.0.12", features = ["derive"] }
criterion = "0.5.1"
csv = "1.3.1"
flate2 = "1.0.35"
rayon = { workspace = true }
rmp-serde = { workspace = true }
sha2 = "0.10.6"
sha256 = "1.1.1"
test_utils = { path = "test_utils" }
vidyut-lipi = { path = "../vidyut-lipi" }

[features]
default = ["serde"]
serde = []

[[bench]]
name = "microbenchmarks"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
