[package]
name = "vidyut-sandhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
compact_str = "0.6.1"
csv = "1.1.6"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"

[dev-dependencies]
tempfile = "3.3.0"
