[package]
name = "vidyut-sandhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
compact_str = "0.7.1"
csv = "1.1.6"
rustc-hash = "2.1.0"
vidyut-akshara = { path = "../vidyut-akshara" }

[dev-dependencies]
tempfile = "3.3.0"
