[package]
name = "vidyut-sandhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
compact_str = "0.7.1"
csv = "1.1.6"
rustc-hash = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
vidyut-akshara = { path = "../vidyut-akshara" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
tempfile = "3.3.0"
